--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -33,18 +33,11 @@ builds:
       - arm64
 
 archives:
-  - id: dcm
-    format: tar.gz
-    format_overrides:
-      - goos: windows
-        format: zip
-    name_template: '{{ .ProjectName }}-{{ .Version }}-{{ .Os }}-{{ .Arch }}'
-    builds:
-      - dcm
-      - install
-    files:
-      - LICENSE
-      - README.md
+  - id: full
+    ids: [dcm, install]
+    strip_binary_directory: false
+    formats: [ 'zip' ]
+    name_template: '{{ .ProjectName }}_full_{{ .Os }}_{{ .Arch }}_{{ .Version }}'
 
 checksum:
   name_template: 'checksums.txt'
